# gpu-insight-lab

./: .gitignore  CMakeLists.txt  README.md  README_zh-TW.md  pyproject.toml  requirements.txt
app/: __init__.py  branding.py  cli.py  config.py  features.py  main.py  version.py
app/controllers/: __init__.py  benchmark_controller.py  diagnosis_controller.py  history_controller.py  report_controller.py
app/gui/: __init__.py  benchmark_page.py  dashboard_page.py  history_page.py  main_window.py  report_page.py  settings_page.py  workers.py
benchmarks/: __init__.py  cpu_baselines.py  native_runner.py  runner.py  schemas.py  workload_profiles.py
collectors/: __init__.py  amd_collector.py  cuda_collector.py  nvidia_collector.py  pcie_collector.py  system_collector.py  tool_collector.py
diagnosis/: __init__.py  engine.py  evidence.py  recommendations.py  rules.py  scoring.py
docs/: 12_WEEK_CUDA_JOB_ROADMAP.md  ARCHITECTURE.md  BENCHMARK_METHODOLOGY.md  CODE_COVERAGE_AUDIT.md  COMMERCIAL_ROADMAP.md  CUDA_VS_HIP.md  DEMO_GUIDE.md  DIAGNOSIS_RULES.md  INTERVIEW_GUIDE.md
examples/: demo_manifest.json  sample_benchmark_result.json  sample_diagnosis.json  sample_session.json
native/: CMakeLists.txt
native/common/: benchmark_result.cpp  json_writer.cpp  json_writer.hpp  statistics.cpp
native/cuda/: benchmark_main.cu  convolution_2d.cu  device_info.cu  gemm_naive.cu  gemm_tiled.cu  image_grayscale.cu  memory_bandwidth.cu  prefix_sum.cu  reduction.cu  stream_pipeline.cu  transpose.cu  vector_add.cu
native/hip/: README.md  gemm_naive_hip.cpp  reduction_hip.cpp  vector_add_hip.cpp
native/include/: benchmark_result.hpp  cuda_check.cuh  statistics.hpp  timer.hpp
profilers/: __init__.py  nsight_compute.py  nsight_systems.py  nvidia_smi_monitor.py  rocm_profiler.py
reports/: __init__.py  csv_report.py  excel_report.py  html_report.py  json_report.py  markdown_report.py
reports/templates/: report.html.j2
scripts/: build_native.ps1  clean.ps1  package.ps1  run_cli.ps1  run_gui.ps1  run_interview_demo.ps1  run_tests.ps1
storage/: __init__.py  database.py  migrations.py  models.py
tests/: __init__.py  test_cli_commands.py  test_code_coverage_audit.py  test_collectors.py  test_demo_readiness.py  test_diagnosis.py  test_interview_demo_readiness.py  test_native_manifest.py  test_reports.py  test_smoke.py  test_statistics.py  test_storage.py
workloads/: __init__.py  custom_command.py  image_batch.py  llm_benchmark.py  media_preprocess.py
